test/fail/generic-type-not-enough.grace
type Name<T, U> = U

Name<type {}>
